--- a/css/form.css
+++ b/css/form.css
@@ -12,7 +12,7 @@ main{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 135vh;
+  height: 170vh;
 }
 
 .heading{
@@ -167,7 +167,7 @@ label{
 @media (min-width: 1024px){
   main{
     width: 98vw;
-    height: 175vh;
+    height: 180vh;
   }
 
   .heading{
@@ -176,10 +176,12 @@ label{
 
   .content{
     margin-top: -30px;
+    margin-left: 0;
   }
   .content img{
     width: 50vw;
     margin-top: 0;
+    margin-left: 7%;
   }
 
   .right-content{
